--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title></title>
 </head>
 <body>
-<h1>Coming soon... Le Wagon</h1>
+	<img src="Lightbulb.svg">
+	<h1>Coming soon... Le Wagon</h1>
 </body>
 </html>
