Centered image and tag line

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>My Project</title>
 </head>
 <body>
-	<img src="Lightbulb.svg">
-	<h1>Coming soon... Le Wagon</h1>
+	<div id="container">
+		<img id="logo" src="Lightbulb.svg">
+		<h1>Coming soon... Le Wagon</h1>
+	</div>
 </body>
 </html>
